[tool.poetry]
name = "airbnb-new-backend"
version = "0.1.0"
description = ""
authors = ["moonk <mkjoehsb@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "airbnb_new_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
